--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "constructs": "^10.0.78",
     "ts-node": "^10.6.0",
     "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "@types/uuid": "^8.3.4",
+    "uuid": "^8.3.2"
   }
 }
