--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "@types/aws-lambda": "^8.10.93",
     "@types/uuid": "^8.3.4",
     "aws-sdk": "^2.1087.0",
     "esbuild": "^0.14.25",
