Primary key in scan query

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,9 +17,9 @@
             ],
             "env": {
                 "AWS_REGION":"eu-west-1",
-                "TABLE_NAME": "SpacesTable"
+                "TABLE_NAME": "SpacesTable",
+                "PRIMARY_KEY": "spaceId"
             }
-            ]
         }
     ]
 }
